--- a/workEx.html
+++ b/workEx.html
@@ -58,7 +58,7 @@ Columbia CaseWorks 180203, April 2018. Available through <a href="https://hbsp.h
 </ul>
 
 <ul>
-<li><p><b><a href="http://pages.stern.nyu.edu/~mcohen2/Case-Study-Promotions.pdf">Case Study: "Optimizing Promotions for Supermarkets Using Data Analytics,"</a></b> with G. Perakis<br />
+<li><p><b><a href="https://maxccohen.github.io/Case-Study-Promotions.pdf">Case Study: "Optimizing Promotions for Supermarkets Using Data Analytics,"</a></b> with G. Perakis<br />
 Available through <a href="http://www.thecasecentre.org/educators/products/view?id=141750">thecasecentre.org</a>, March 2017.
 </p>
 </li>
