--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@ I am co-organizing the <a href="https://sites.google.com/view/nycopsday2019/home
 <td align="left"></td></tr></table>
 
 
-  <p>NYU Stern School of Business<br />
-KMC 8-77, 44 West 4th Street, New York, NY 10012
+  <p>Desautels Faculty of Management, McGill University<br />
+Bronfman 536, 1001 Sherbrooke St W, Montreal, QC H3A 1G5
 
 <h3> <a href="https://www.linkedin.com/in/maximecohen">
 <img src="linkedin_logo.jpg" alt="Linkedin Logo" width="150px"  /></a> </p>
