--- a/research.html
+++ b/research.html
@@ -89,7 +89,7 @@ Media coverage: <a href="http://news.mit.edu/2016/subsidies-clean-tech-backing-0
 
 <ol start="2">
 <li><p><a href="https://maxccohen.github.io/Promo.pdf">"The Impact of Linear Optimization on Promotion Planning,"</a> with Z. Leung, G. Perakis, K. Panchamgam, and A. Smith, <b>Operations Research</b> 65(2):446-468, 2017. <br />
-<a href="http://pages.stern.nyu.edu/~mcohen2/Promo_Appendix.pdf">Online Appendix</a>.<br />
+<a href="https://maxccohen.github.io/Promo_Appendix.pdf">Online Appendix</a>.<br />
 Media coverage: <a href="https://www.huffingtonpost.com/entry/a-revolutionary-model-to-optimize-promotion-pricing_us_579638bee4b0e002a313c6da">HuffPost</a>, <a href="https://orbythebeach.wordpress.com/tag/promotions/">O.R. by the Beach</a>, <a href="http://mitsloanexperts.mit.edu/a-revolutionary-model-to-optimize-promotion-pricing/">MIT Sloan Experts</a> <br />
 </div>
 </p>
@@ -98,7 +98,7 @@ Media coverage: <a href="https://www.huffingtonpost.com/entry/a-revolutionary-mo
 
 <ol start="3">
 <li><p><a href="https://maxccohen.github.io/Vehicles.pdf">"Scheduling Promotion Vehicles to Boost Profits,"</a> with L. Baardman</a>, K. Panchamgam, G. Perakis, and D. Segev, <b>Management Science</b> 65(1):50-70, 2019. <br />
-<a href="http://pages.stern.nyu.edu/~mcohen2/Vehicles_Appendix.pdf">Online Appendix</a>.
+<a href="https://maxccohen.github.io/Vehicles_Appendix.pdf">Online Appendix</a>.
 </div>
 </li>
 </ol> 
@@ -127,7 +127,7 @@ Media coverage: <a href="https://www.huffingtonpost.com/entry/a-revolutionary-mo
 <ol start="7">
 <li><p><a href="https://maxccohen.github.io/Cloud_Overcommit.pdf">"Overcommitment in Cloud Services - Bin packing with Chance Constraints,"</a> with P. Keller, V. Mirrokni, and M. Zadimoghaddam, <b>Management Science</b> 65(7):3255-3271, 2019. <br />
 Accepted to the 2017 <i>ACM SIGMETRICS Conference</i>.<br />
-<a href="http://pages.stern.nyu.edu/~mcohen2/Overcommit_Appendix.pdf">Online Appendix</a>.
+<a href="https://maxccohen.github.io/Overcommit_Appendix.pdf">Online Appendix</a>.
 </div>
 </li>
 </ol> 
@@ -163,7 +163,7 @@ Associated article in <a href="http://www.sigecom.org/exchanges/volume_15/2/COHE
 <ul>
 <li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3129717">"Frustration-Based Promotions: Field Experiments in Ride-Sharing,"</a> with M. D. Fiszer and B. J. Kim, Major Revision in <b>Management Science</b>. <br />
 Accepted to the <i>2018 M&SOM Service SIG</i> and to the <i>2018 Marketplace Innovation Workshop</i>.<br />
-Media coverage: <a href="https://qz.com/1394320/economists-figured-out-the-best-way-for-uber-to-say-sorry/">Quartz</a>, <a href="https://oversharing.substack.com/p/economists-figured-out-the-best-way-for-uber-to-say-sorry">Oversharing</a>, <a href="http://www.stern.nyu.edu/experience-stern/faculty-research/proactive-customer-service-helps-ride-share-startup-gain-an-edge-in-a-brutal-market">NYU Stern Research Highlights</a>, <a href="http://pages.stern.nyu.edu/~mcohen2/Faculty Research-Maxime Cohen.pdf">Stern Alumni Magazine</a> <br />
+Media coverage: <a href="https://qz.com/1394320/economists-figured-out-the-best-way-for-uber-to-say-sorry/">Quartz</a>, <a href="https://oversharing.substack.com/p/economists-figured-out-the-best-way-for-uber-to-say-sorry">Oversharing</a>, <a href="http://www.stern.nyu.edu/experience-stern/faculty-research/proactive-customer-service-helps-ride-share-startup-gain-an-edge-in-a-brutal-market">NYU Stern Research Highlights</a>, <a href="https://maxccohen.github.io/Faculty Research-Maxime Cohen.pdf">Stern Alumni Magazine</a> <br />
 </div>
 </p>
 </li>
@@ -315,7 +315,7 @@ In this paper, we ....
 <h3>Book Chapter and Theses</h3>
 
 <ul>
-<li><p><a href="http://pages.stern.nyu.edu/~mcohen2/Book-Chapter-Promotions.pdf">"Promotion Optimization in Retail,"</a> with G. Perakis, Channel Strategies and Marketing Mix in a Connected World, (Eds.) Saibal Ray and Shuya Yin, Springer, Forthcoming. <br />
+<li><p><a href="https://maxccohen.github.io/Book-Chapter-Promotions.pdf">"Promotion Optimization in Retail,"</a> with G. Perakis, Channel Strategies and Marketing Mix in a Connected World, (Eds.) Saibal Ray and Shuya Yin, Springer, Forthcoming. <br />
 </div>
 </p>
 </li>
@@ -329,7 +329,7 @@ In this paper, we ....
 </ul>
 
 <ul>
-<li><p><a href="http://pages.stern.nyu.edu/~mcohen2/MS-Thesis.pdf">"Network Time Synchronization Using Decentralized Kalman Filtering,"</a> M.S. Thesis, Technion, Oct. 2009. <br />
+<li><p><a href="https://maxccohen.github.io/MS-Thesis.pdf">"Network Time Synchronization Using Decentralized Kalman Filtering,"</a> M.S. Thesis, Technion, Oct. 2009. <br />
 </div>
 </p>
 </li>
@@ -338,14 +338,14 @@ In this paper, we ....
 <h3>Others</h3>
 
 <ul>
-<li><p><a href="http://pages.stern.nyu.edu/~mcohen2/CohenShimkin2010.pdf">"Decentralized Algorithms for Sequential Network Time Synchronization,"</a> with N. Shimkin, Proc. NETCOOP, 4<sup>th</sup> Workshop on Network Control and Optimization, Ghent, Belgium, Dec. 2010, pp. 97-104. <br />
+<li><p><a href="https://maxccohen.github.io/CohenShimkin2010.pdf">"Decentralized Algorithms for Sequential Network Time Synchronization,"</a> with N. Shimkin, Proc. NETCOOP, 4<sup>th</sup> Workshop on Network Control and Optimization, Ghent, Belgium, Dec. 2010, pp. 97-104. <br />
 </div>
 </p>
 </li>
 </ul>
 
 <ul>
-<li><p><a href="http://pages.stern.nyu.edu/~mcohen2/SunSailorArt19nov06.pdf">"Sunsailor: Solar Powered UAV,"</a> with S. Tsach, L. Ankri, Y. Ehrlich, T. Goldenberg, H. Levy, I. Regev, A. Vladimirsky, A. 
+<li><p><a href="https://maxccohen.github.io/SunSailorArt19nov06.pdf">"Sunsailor: Solar Powered UAV,"</a> with S. Tsach, L. Ankri, Y. Ehrlich, T. Goldenberg, H. Levy, I. Regev, A. Vladimirsky, A. 
 Weider, and Z. Yossef, Proc. 47<sup>th</sup> Israel Annual Conf. on Aerospace Sciences, Feb. 2007. <br />
 Winner of the 2007 Technion Creativity in Science and Technology competition. <br />
 </div>
