--- a/awards.html
+++ b/awards.html
@@ -28,15 +28,16 @@
 </div>
 <h3>Awards & Grants</h3>
 <ul>
-
+<li><p>Best Paper Award in Operations and Supply Chain Management, Academy of Management, 2019</p>
+  
+<li><p>Honorable Mention in th 2019 ENRE Best Publication Award in Environment and Sustainability</p>
+  
+<li><p>Finalist in the 2019 INFORMS Case Competition</p>
+    
 <li><p>2019: Cherre’s Gift for Research Excellence: Applying Data Science to Real Estate - $10,400, Role: PI</p>
 
 <li><p>2019-2021  SSHRC New Frontiers Grant: AI-Tribunal for Small Claims: Building an Intelligent Dispute Resolution System  - $244,562 <br />
 Role: Co-applicant  (with S. Dahan, X. Zhu, J. Serpa, Y. Levin, J. Touboul)</p>
-
-<li><p>Finalist in the 2019 INFORMS Case Competition</p>
-
-<li><p>Best Paper Award in Operations and Supply Chain Management, Academy of Management, 2019</p>
 
 <li><p>2018 M&SOM Meritorious Service Award</p>
 
