--- a/awards.html
+++ b/awards.html
@@ -30,7 +30,7 @@
 <ul>
 <li><p>Best Paper Award in Operations and Supply Chain Management, Academy of Management, 2019</p>
   
-<li><p>Honorable Mention in th 2019 ENRE Best Publication Award in Environment and Sustainability</p>
+<li><p>Honorable Mention in the 2019 ENRE Best Publication Award in Environment and Sustainability</p>
   
 <li><p>Finalist in the 2019 INFORMS Case Competition</p>
     
