--- a/awards.html
+++ b/awards.html
@@ -28,6 +28,8 @@
 </div>
 <h3>Awards & Grants</h3>
 <ul>
+<li><p>Finalist in the INFORMS BOM Section Best Working Paper Competition, 2019</p>
+  
 <li><p>Best Paper Award in Operations and Supply Chain Management, Academy of Management, 2019</p>
   
 <li><p>Honorable Mention in the 2019 ENRE Best Publication Award in Environment and Sustainability</p>
