--- a/awards.html
+++ b/awards.html
@@ -28,6 +28,8 @@
 </div>
 <h3>Awards & Grants</h3>
 <ul>
+<li><p>Finalist in the Best OM Paper in Management Science Award, 2019</p>
+  
 <li><p>Finalist in the INFORMS Data Mining Section Best Paper Competition, 2019</p>
   
 <li><p>Finalist in the INFORMS BOM Section Best Working Paper Competition, 2019</p>
