--- a/awards.html
+++ b/awards.html
@@ -39,7 +39,9 @@
 <li><p>Honorable Mention in the 2019 ENRE Best Publication Award in Environment and Sustainability</p>
   
 <li><p>Finalist in the 2019 INFORMS Case Competition</p>
-    
+  
+<li><p>2019-2021:Bensadoun Faculty Scholar Award - $20,000 per year for 3 years</p>
+  
 <li><p>2019: Cherre’s Gift for Research Excellence: Applying Data Science to Real Estate - $10,400, Role: PI</p>
 
 <li><p>2019-2021  SSHRC New Frontiers Grant: AI-Tribunal for Small Claims: Building an Intelligent Dispute Resolution System  - $244,562 <br />
