--- a/research.html
+++ b/research.html
@@ -161,6 +161,20 @@ Associated article in <a href="http://www.sigecom.org/exchanges/volume_15/2/COHE
 <h3>Under Review and Working Papers</h3>
 
 <ul>
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3458330">"Incentivizing Commuters to Carpool: A Large Field Experiment with Waze,"</a> with M. D. Fiszer, A. Ratzon, and R. Sasson, submitted. <font color="red"<b>(NEW - September 2019)</b></font> <br />
+</div>
+</p>
+</li>
+</ul>
+
+<ul>
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3459289">"Pricing with Fairness,"</a> with A. N. Elmachtoub and X. Lei, submitted. <font color="red"<b>(NEW - September 2019)</b></font> <br />
+</div>
+</p>
+</li>
+</ul>
+
+<ul>
 <li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3129717">"Frustration-Based Promotions: Field Experiments in Ride-Sharing,"</a> with M. D. Fiszer and B. J. Kim, Major Revision in <b>Management Science</b>. <br />
 Accepted to the <i>2018 M&SOM Service SIG</i> and to the <i>2018 Marketplace Innovation Workshop</i>.<br />
 Media coverage: <a href="https://qz.com/1394320/economists-figured-out-the-best-way-for-uber-to-say-sorry/">Quartz</a>, <a href="https://oversharing.substack.com/p/economists-figured-out-the-best-way-for-uber-to-say-sorry">Oversharing</a>, <a href="http://www.stern.nyu.edu/experience-stern/faculty-research/proactive-customer-service-helps-ride-share-startup-gain-an-edge-in-a-brutal-market">NYU Stern Research Highlights</a>, <a href="https://maxccohen.github.io/Faculty Research-Maxime Cohen.pdf">Stern Alumni Magazine</a> <br />
