--- a/workEx.html
+++ b/workEx.html
@@ -71,7 +71,7 @@ Available through <a href="http://www.thecasecentre.org/educators/products/view?
 </ul>
 
 <ul>
-<li><p><b><a href="https://www.liebertpub.com/doi/full/10.1089/big.2018.0092">Case Study: "Data-Driven Investment Strategies for Peer-to-Peer Lending,"</a></b> with C.D Guetta, K. Jiao, and F. Provost, <a href="https://danguetta.github.io/research/lc">Supplemental material and notebooks</a>.
+<li><p><b><a href="https://www.liebertpub.com/doi/full/10.1089/big.2018.0092">Case Study: "Data-Driven Investment Strategies for Peer-to-Peer Lending,"</a></b> with C. D. Guetta, K. Jiao, and F. Provost, <a href="https://danguetta.github.io/research/lc">Supplemental material and notebooks</a>.
 </p>
 </li>
 </ul>
