--- a/index.html
+++ b/index.html
@@ -53,12 +53,10 @@ McGill University</p>
 <h2>About</h2>
  <p class="p2"><span>
  I am an Associate Professor of Retail Management and Operations Management and a Bensadoun Faculty Scholar at <a href="https://www.mcgill.ca/"</a> McGill University</a>.
- <!--   where I am also be a member of the <a href="http://www.stern.nyu.edu/experience-stern/about/departments-centers-initiatives/centers-of-research/business-analytics">Center for Business Analytics</a>. 
-  I am broadly interested in <b>Operations Management.</b> 
-  In particular, my research focuses on various applications of revenue management and pricing such as sustainability, retail environments and social media. -->
  Before joining McGill, I was an Assistant Professor of Technology, Operations, and Statistics</a> 
  at <a href="http://www.stern.nyu.edu/"</a> NYU Stern</a> and a Research Scientist at <a href="https://ai.google/">Google AI</a>. 
  I previously worked as a high-frequency trader and co-founded a real estate investment company.
+ Besides university teaching and academic research, I am actively advising corporations and startups on topics related to pricing and data science.
   <!-- My master's thesis was under the supervision of Professor <a href="http://webee.technion.ac.il/people/shimkin/">Nahum Shimkin</a>. 
   Here is a link to <a href="http://webee.technion.ac.il/people/maxcohen">my master's homepage</a>. -->
   
