--- a/workEx.html
+++ b/workEx.html
@@ -30,21 +30,42 @@
 <h2>Teaching Experience and Case Studies</h2>
 
 <ul>
-<li><p><b><a href="">Operations Management - 2017-2019 </a></b><br />
+<li><p><b><a href="">Operations Management - McGill University - 2020 </a></b><br />
+Undergraduate core course (2 sections of 65 students).
+</p>
+</li>
+</ul>
+
+<ul>
+<li><p><b><a href="">Revenue Management - McGill University - 2020 </a></b><br />
+Elective course for Master of Management in Analytics.
+</p>
+</li>
+</ul>
+  
+<ul>
+<li><p><b><a href="">Service Analytics - McGill University - 2020 </a></b><br />
+Elective course for Master of Management in Analytics.
+</p>
+</li>
+</ul>
+  
+<ul>
+<li><p><b><a href="">Operations Management - NYU Stern - 2017-2019 </a></b><br />
 Undergraduate core course (2 sections of 70 students each year). Evaluations: 6.6, 6.7, 6.5, 6.7 (out of 7), 4.8, 4.8 (out of 5).
 </p>
 </li>
 </ul>
 
 <ul>
-<li><p><b><a href="">Operations in the Sharing Economy - 2019 </a></b><br />
+<li><p><b><a href="">Operations in the Sharing Economy - NYU Stern - 2019 </a></b><br />
 Doctoral course on recent research trends in the context of the sharing economy. Evaluation: 5/5.
 </p>
 </li>
 </ul>
 
 <ul>
-<li><p><b><a href="">Applying Revenue Management: Optimization in Retail - 2016 </a></b><br />
+<li><p><b><a href="">Applying Revenue Management: Optimization in Retail - NYU Stern - 2016 </a></b><br />
 Course in the M.S. in Business Analytics program - 61 students.
 </p>
 </li>
