--- a/students.html
+++ b/students.html
@@ -31,9 +31,9 @@
 
 <li><p>Baek Jung Kim (2019) - Marketing Ph.D. student at NYU (advisors: M. Ishihara and V. Singh). First position: Assistant Professor of Marketing, UBC Sauder School of Business.</p>
 
-<li><p>Kevin Jiao (2019) - OM Ph.D. student at NYU</p>
+<li><p>Kevin Jiao (2019) - OM Ph.D. student at NYU. First position: FINRA, Data Scientist.</p>
 
-<li><p>Dmitry Mitrofanov (2020) - OM Ph.D. student at NYU (advisor: Srikanth Jagabathula)</p>
+<li><p>Dmitry Mitrofanov (2020) - OM Ph.D. student at NYU (advisor: Srikanth Jagabathula). First position: Assistant Professor of Operations Management, Boston College Carroll School of Management.</p>
 
 <li><p>Haotian Song - OM Ph.D. student at NYU (advisor: Wenqiang Xiao)</p>
 
