--- a/students.html
+++ b/students.html
@@ -49,9 +49,11 @@
 
 <li><p>Weitao Lin (2018) - M.S. in Data Science at NYU. First Position: RBC Capital Markets, Data Scientist</p>
 
-<li><p>Marcos Galante (2018) - NYU Stern Honors Program. First Position: Goldman Sachs, Investment Banking</p>
+<li><p>Marcos Galante (2018) - NYU UG Stern Honors. First Position: Goldman Sachs, Investment Banking</p>
 
 <li><p>Junge Zhang (2020) - M.S. in Data Science at NYU</p>
+  
+<li><p>Matthieu Reed (2020) – McGill UG Integrated Management Student Fellow</p>
 
 
 <!--Page generated 2009-08-14 17:53:09 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.-->
