--- a/research.html
+++ b/research.html
@@ -161,14 +161,14 @@ Associated article in <a href="http://www.sigecom.org/exchanges/volume_15/2/COHE
 <h3>Under Review and Working Papers</h3>
 
 <ul>
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3458330">"Incentivizing Commuters to Carpool: A Large Field Experiment with Waze,"</a> with M. D. Fiszer, A. Ratzon, and R. Sasson, submitted. <font color="red"<b>(NEW - September 2019)</b></font> <br />
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3458330">"Incentivizing Commuters to Carpool: A Large Field Experiment with Waze,"</a> with M. D. Fiszer, A. Ratzon, and R. Sasson, submitted. <br /> <!-- <font color="red"<b>(NEW - September 2019)</b></font> <br /> -->
 </div>
 </p>
 </li>
 </ul>
 
 <ul>
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3459289">"Pricing with Fairness,"</a> with A. N. Elmachtoub and X. Lei, submitted. <font color="red"<b>(NEW - September 2019)</b></font> <br />
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3459289">"Pricing with Fairness,"</a> with A. N. Elmachtoub and X. Lei, submitted. <br /> <!-- <font color="red"<b>(NEW - September 2019)</b></font> <br /> -->
 </div>
 </p>
 </li>
