--- a/research.html
+++ b/research.html
@@ -327,7 +327,7 @@ In this paper, we ....
 </ul>
 -->
 
-<h3>Book Chapter and Theses</h3>
+<h3>Book Chapter, Practitioner, and Conference Publication</h3>
 
 <ul>
 <li><p><a href="https://maxccohen.github.io/Book-Chapter-Promotions.pdf">"Promotion Optimization in Retail,"</a> with G. Perakis, Channel Strategies and Marketing Mix in a Connected World, (Eds.) Saibal Ray and Shuya Yin, Springer, Forthcoming. <br />
@@ -337,20 +337,18 @@ In this paper, we ....
 </ul>
 
 <ul>
-<li><p><a href="https://dspace.mit.edu/bitstream/handle/1721.1/101291/938821441-MIT.pdf;sequence=1">"Pricing for Retail, Social Networks, and Green Technologies,"</a> Ph.D. Thesis, Massachusetts Institute of Technology, Sept. 2015. <br />
+<li><p><a href="">"Upgrading Promotions Using Business Analytics,"</a> with L. Baardman, K. Panchamgam, and G. Perakis, Forthcoming in <b>Management and Business Review</b>
 </div>
 </p>
 </li>
 </ul>
 
 <ul>
-<li><p><a href="https://maxccohen.github.io/MS-Thesis.pdf">"Network Time Synchronization Using Decentralized Kalman Filtering,"</a> M.S. Thesis, Technion, Oct. 2009. <br />
+<li><p><a href="">"Upgrading Promotions Using Business Analytics,"</a> with Samuel Dahan and Colin Rule, Submitted.
 </div>
 </p>
 </li>
 </ul>
-
-<h3>Others</h3>
 
 <ul>
 <li><p><a href="https://maxccohen.github.io/CohenShimkin2010.pdf">"Decentralized Algorithms for Sequential Network Time Synchronization,"</a> with N. Shimkin, Proc. NETCOOP, 4<sup>th</sup> Workshop on Network Control and Optimization, Ghent, Belgium, Dec. 2010, pp. 97-104. <br />
@@ -367,6 +365,24 @@ Winner of the 2007 Technion Creativity in Science and Technology competition. <b
 </p>
 </li>
 </ul>
+
+<h3>Theses</h3>
+
+<ul>
+<li><p><a href="https://dspace.mit.edu/bitstream/handle/1721.1/101291/938821441-MIT.pdf;sequence=1">"Pricing for Retail, Social Networks, and Green Technologies,"</a> Ph.D. Thesis, Massachusetts Institute of Technology, Sept. 2015. <br />
+</div>
+</p>
+</li>
+</ul>
+
+<ul>
+<li><p><a href="https://maxccohen.github.io/MS-Thesis.pdf">"Network Time Synchronization Using Decentralized Kalman Filtering,"</a> M.S. Thesis, Technion, Oct. 2009. <br />
+</div>
+</p>
+</li>
+</ul>
+
+
 </td>
 </tr>
 </table>
