--- a/research.html
+++ b/research.html
@@ -344,7 +344,7 @@ In this paper, we ....
 </ul>
 
 <ul>
-<li><p><a href="">"Upgrading Promotions Using Business Analytics,"</a> with Samuel Dahan and Colin Rule, Submitted.
+<li><p><a href="">"Conflict Analytics: When Data Science Meets Dispute Resolution,"</a> with Samuel Dahan and Colin Rule, Submitted.
 </div>
 </p>
 </li>
