--- a/workEx.html
+++ b/workEx.html
@@ -97,6 +97,12 @@ Available through <a href="http://www.thecasecentre.org/educators/products/view?
 </li>
 </ul>
 
+<ul>
+<li><p><b><a href="">Case Study: "Modern Retail Analytics: Data Visualization using Tableau,"</a></b> with C. D. Guetta and M. Reed (available upon request).
+</p>
+</li>
+</ul>
+  
 <!--
 <ul>
 <li><p><b><a href="">15.767 - Introduction to Healthcare Delivery in the US: Market & System
