--- a/research.html
+++ b/research.html
@@ -327,7 +327,7 @@ In this paper, we ....
 </ul>
 -->
 
-<h3>Book Chapter, Practitioner, and Conference Publication</h3>
+<h3>Book Chapter, Practitioner, and Conference Publications</h3>
 
 <ul>
 <li><p><a href="https://maxccohen.github.io/Book-Chapter-Promotions.pdf">"Promotion Optimization in Retail,"</a> with G. Perakis, Channel Strategies and Marketing Mix in a Connected World, (Eds.) Saibal Ray and Shuya Yin, Springer, Forthcoming. <br />
