--- a/index.html
+++ b/index.html
@@ -33,8 +33,11 @@
 <table class="imgtable"><tr><td>
 <img src="MCohen-2019-V2.png" alt="Maxime Cohen" height="285" width="245" />&nbsp;</td>
 <td align="left"><p><b>Maxime C. Cohen</b><br />
-Associate Professor<br />
-McGill University</p>
+Associate Professor, <a href="https://www.mcgill.ca/"</a> McGill University</a><br />
+Bensadoun Faculty Scholar <br />
+Co-director of the McGill Retail Innovation Lab <br />
+Member of <a href="https://www.cirrelt.ca/default.aspx?Page=MEMBRES_CHERCHEURS_DETAILS&CH_ID=28926"</a> CIRRELT </a> <br />
+<a href="https://conflictanalytics.queenslaw.ca/team"</a> Conflict Analytics Lab</a>  </p>
 
 </td>
 <td>
