--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <td align="left"><p><b>Maxime C. Cohen</b><br />
 Associate Professor, <a href="https://www.mcgill.ca/"</a> McGill University</a><br />
 Bensadoun Faculty Scholar <br />
-Co-director, <a href="https://www.mcgill.ca/bensadoun-school/mril"</a> McGill Retail Innovation Lab</a> <br />
+Co-Director, <a href="https://www.mcgill.ca/bensadoun-school/mril"</a> McGill Retail Innovation Lab</a> <br />
 Member of <a href="https://www.cirrelt.ca/default.aspx?Page=MEMBRES_CHERCHEURS_DETAILS&CH_ID=28926"</a> CIRRELT </a> <br />
 Data Science and AI @<a href="https://conflictanalytics.queenslaw.ca/team"</a> Conflict Analytics Lab</a>  </p>
 
