--- a/awards.html
+++ b/awards.html
@@ -28,6 +28,9 @@
 </div>
 <h3>Awards & Grants</h3>
 <ul>
+  
+<li><p>2020: Internal Social Sciences and Humanities Development Grant - $5,000</p>
+  
 <li><p>First Place in the Best OM Paper in Management Science Award, 2019</p>
   
 <li><p>Finalist in the INFORMS Data Mining Section Best Paper Competition, 2019</p>
