--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ Data Science and AI @<a href="https://conflictanalytics.queenslaw.ca/team"</a> C
   
 <br /> <br />
 My core expertise lies at the intersection of <b>data science</b> and <b>operations management</b>. I have worked on retail, ride-sharing, airline, sustainability,
-cloud computing, online advertising, peer-to-peer lending, and social networks. I have collaborated with different companies including Google, Oracle Retail, IBM Research, Via (ride-sharing), Spotify, Cargo, Staples as well as several startups. In each project, I have worked closely with the company to develop solutions 
+cloud computing, online advertising, peer-to-peer lending, and social networks. I have collaborated with different companies including Google, Oracle Retail, IBM Research, Via (ride-sharing), Spotify, Aldo Group, Cargo, Staples as well as several startups. In each project, I have worked closely with the company to develop solutions 
 using tools such as optimization, machine learning, stochastic modeling, econometrics, game theory, and field experiments.  <!--I currently serve as a senior editor for the <a href="http://www.poms.org/journal/"</a>POMS</a> journal. -->
  
  <p><b>Ph.D.</b>, Operations Research, <a href="http://www.mit.edu/">MIT</a>
