--- a/research.html
+++ b/research.html
@@ -331,7 +331,7 @@ In this paper, we ....
 <h3>Book Chapter, Practitioner, and Conference Publications</h3>
 
 <ul>
-<li><p><a href="https://maxccohen.github.io/Book-Chapter-Promotions.pdf">"Promotion Optimization in Retail,"</a> with G. Perakis, Channel Strategies and Marketing Mix in a Connected World, (Eds.) Saibal Ray and Shuya Yin, Springer, Forthcoming. <br />
+<li><p><a href="https://link.springer.com/chapter/10.1007/978-3-030-31733-1_4">"Optimizing Promotions for Multiple Items in Supermarkets,"</a> with G. Perakis, Channel Strategies and Marketing Mix in a Connected World, (Eds.) Saibal Ray and Shuya Yin, Springer Series in Supply Chain Management 9, 2020. <br />
 </div>
 </p>
 </li>
