--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
 Associate Professor, <a href="https://www.mcgill.ca/"</a> McGill University</a><br />
 Bensadoun Faculty Scholar <br />
 Co-Director, <a href="https://www.mcgill.ca/bensadoun-school/mril"</a> McGill Retail Innovation Lab</a> <br />
-Member of <a href="https://www.cirrelt.ca/default.aspx?Page=MEMBRES_CHERCHEURS_DETAILS&CH_ID=28926"</a> CIRRELT </a> <br />
+Member of <a href="https://www.cirrelt.ca/"</a> CIRRELT </a> <br />
 Advisor @<a href="https://sarona.vc"</a> Sarona Ventures</a> <br />
-Data Science and AI @<a href="https://conflictanalytics.queenslaw.ca/team"</a> Conflict Analytics Lab</a> </p>
+Data Science and AI @<a href="https://conflictanalytics.queenslaw.ca/"</a> Conflict Analytics Lab</a> </p>
 
 </td>
 <td>
