--- a/research.html
+++ b/research.html
@@ -133,7 +133,8 @@ Accepted to the 2017 <i>ACM SIGMETRICS Conference</i>.<br />
 </ol> 
 
 <ol start="8">
-<li><p><a href="https://maxccohen.github.io/Pricing_Networks.pdf">"Designing Price Incentives in a Network with Social Interactions,"</a> with P. Harsha, Forthcoming in <b>Manufacturing & Service Operations Management</b> (published online in August 2019). <br />
+<li><p><a href="https://maxccohen.github.io/Pricing_Networks.pdf">"Designing Price Incentives in a Network with Social Interactions,"</a> with P. Harsha, <b>Manufacturing & Service Operations Management</b> 22(2):292-309, 2020. <br />
+<a href="https://maxccohen.github.io/Pricing_Networks_Appendix.pdf">Online Appendix</a>.
 </div>
 </p>
 </li>
