--- a/awards.html
+++ b/awards.html
@@ -30,7 +30,7 @@
 <ul>
   
 <li><p>2020: Internal Social Sciences and Humanities Development Grant - $5,000</p>
-  
+
 <li><p>First Place in the Best OM Paper in Management Science Award, 2019</p>
   
 <li><p>Finalist in the INFORMS Data Mining Section Best Paper Competition, 2019</p>
@@ -42,6 +42,8 @@
 <li><p>Honorable Mention in the 2019 ENRE Best Publication Award in Environment and Sustainability</p>
   
 <li><p>Finalist in the 2019 INFORMS Case Competition</p>
+
+<li><p>2019 M&SOM Meritorious Service Award</p>
   
 <li><p>2019-2021: Bensadoun Faculty Scholar Award - $20,000 per year for 3 years</p>
   
