--- a/awards.html
+++ b/awards.html
@@ -28,7 +28,11 @@
 </div>
 <h3>Awards & Grants</h3>
 <ul>
+
+<li><p>2020 POMS Wickham Skinner Early-Career Research Accomplishments Award</p>
   
+<li><p>Honorable Mention in the 2020 POMS Service Operations Emerging Scholar Award</p>
+
 <li><p>2020: Internal Social Sciences and Humanities Development Grant - $5,000</p>
 
 <li><p>First Place in the Best OM Paper in Management Science Award, 2019</p>
@@ -72,31 +76,21 @@ Role: Co-applicant  (with S. Dahan, X. Zhu, J. Serpa, Y. Levin, J. Touboul)</p>
 
 <li><p>Finalist in the 2015 INFORMS Revenue Management and Pricing Practice Award</p>
 
-<li><p>
-First Place in the 2015 Best Student Paper POM Supply Chain 
- </p>
-<li><p> 2015 NEDSI Conference Best Application of Theory Award
- </p>
-<li><p>
-First Place in the 2014 Best Student Paper Award - INFORMS Service Science
-</p>
-<li><p>UPS Ph.D. Fellowship (2014-2015)
- </p>
-<li><p>
-Martin Fellowship for Sustainability (2013-2014)
- </p>
-<li><p>
-MIT Energy Initiative Fellowship (2011-2012)
- </p>
- <li><p>
-Lady Davis Fellowship (2007-2008)
-</p>
-<li><p>
-First price at the Technion Creativity in Science and Technology competition (2007)
- </p>
-<li><p>
-Best student project in the 47th Israel Annual Conference on Aerospace Sciences (2006)
- </p>
+<li><p>First Place in the 2015 Best Student Paper POM Supply Chain</p><li><p>2015 NEDSI Conference Best Application of Theory Award</p>
+
+<li><p>First Place in the 2014 Best Student Paper Award - INFORMS Service Science</p>
+
+<li><p>UPS Ph.D. Fellowship (2014-2015)</p>
+
+<li><p>Martin Fellowship for Sustainability (2013-2014)</p>
+
+<li><p>MIT Energy Initiative Fellowship (2011-2012)</p>
+
+<li><p>Lady Davis Fellowship (2007-2008)</p>
+
+<li><p>First price at the Technion Creativity in Science and Technology competition (2007)</p>
+
+<li><p>Best student project in the 47th Israel Annual Conference on Aerospace Sciences (2006)</p>
  
 
 <!--Page generated 2009-08-14 17:53:09 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.-->
