--- a/workEx.html
+++ b/workEx.html
@@ -98,7 +98,7 @@ Available through <a href="http://www.thecasecentre.org/educators/products/view?
 </ul>
 
 <ul>
-<li><p><b><a href="">Case Study: "Modern Retail Analytics: Data Visualization using Tableau,"</a></b> with C. D. Guetta and M. Reed (available upon request).
+<li><p><b><a href="">Case Study: "Modern Retail Analytics: Data Visualization Using Tableau,"</a></b> with C. D. Guetta and M. Reed (available upon request).
 </p>
 </li>
 </ul>
