--- a/research.html
+++ b/research.html
@@ -346,7 +346,14 @@ In this paper, we ....
 </ul>
 
 <ul>
-<li><p><a href="">"Conflict Analytics: When Data Science Meets Dispute Resolution,"</a> with Samuel Dahan and Colin Rule, submitted.
+<li><p><a href="">"Conflict Analytics: When Data Science Meets Dispute Resolution,"</a> with S. Dahan and C. Rule, submitted.
+</div>
+</p>
+</li>
+</ul>
+
+<ul>
+<li><p><a href="">"Frictionless Retail: Present and Future,"</a> with S. Zhu and S. Ray, submitted.
 </div>
 </p>
 </li>
