--- a/students.html
+++ b/students.html
@@ -54,6 +54,8 @@
 <li><p>Junge Zhang (2020) - M.S. in Data Science at NYU</p>
   
 <li><p>Matthieu Reed (2020) - McGill UG Integrated Management Student Fellow</p>
+  
+<li><p>Selena Zhu (2020) - McGill UG Integrated Management Student Fellow</p>
 
 
 <!--Page generated 2009-08-14 17:53:09 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.-->
