--- a/research.html
+++ b/research.html
@@ -216,6 +216,13 @@ Media coverage: <a href="https://www.mcgill.ca/delve/article/blog/converting-com
 </ul>
 
 <ul>
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3565117">"The Impact of High-Occupancy Vehicle Lanes on Commuters: Field Evidence,"</a> with A. Ratzon and R. Sasson, submitted. <br />
+</div>
+</p>
+</li>
+</ul>
+
+<ul>
 <li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3459289">"Pricing with Fairness,"</a> with A. N. Elmachtoub and X. Lei, submitted. <br /> <!-- <font color="red"<b>(NEW - September 2019)</b></font> <br /> -->
 </div>
 </p>
