--- a/workEx.html
+++ b/workEx.html
@@ -92,13 +92,15 @@ Available through <a href="http://www.thecasecentre.org/educators/products/view?
 </ul>
 
 <ul>
-<li><p><b><a href="https://www.liebertpub.com/doi/full/10.1089/big.2018.0092">Case Study: "Data-Driven Investment Strategies for Peer-to-Peer Lending,"</a></b> with C. D. Guetta, K. Jiao, and F. Provost, <a href="https://danguetta.github.io/research/lc">Supplemental material and notebooks</a>.
+<li><p><b><a href="https://www.liebertpub.com/doi/full/10.1089/big.2018.0092">Case Study: "Data-Driven Investment Strategies for Peer-to-Peer Lending,"</a></b> with C. D. Guetta, K. Jiao, and F. Provost<br />
+<a href="https://danguetta.github.io/research/lc">Supplemental material and notebooks</a>.
 </p>
 </li>
 </ul>
 
 <ul>
-<li><p><b><a href="">Case Study: "Modern Retail Analytics: Data Visualization Using Tableau,"</a></b> with C. D. Guetta and M. Reed, <a href="https://danguetta.github.io/research/globalsuperstore">Case, Tutorials, and Data</a>.
+<li><p><b><a href="">Case Study: "Modern Retail Analytics: Data Visualization Using Tableau,"</a></b> with C. D. Guetta and M. Reed<br /> 
+Featured as a content piece on the <a href="https://community.tableau.com/community/teachers/overview">Tableau Instructor Resource Page. </a> <a href="https://danguetta.github.io/research/globalsuperstore">Case, Dataset, and Tutorials</a>.
 </p>
 </li>
 </ul>
