--- a/research.html
+++ b/research.html
@@ -276,7 +276,7 @@ Media coverage: <a href="https://www.stern.nyu.edu/experience-stern/news-events/
 </ul>
 
 <ul>
-<li><p><a href="http://ssrn.com/abstract=2607688">"Competition and Externalities in Green Technology Adoption,"</a> with G. Perakis and C. Thraves, working paper. <br />
+<li><p><a href="http://ssrn.com/abstract=2607688">"Competition and Externalities in Green Technology Adoption,"</a> with G. Perakis and C. Thraves, submitted. <br />
 </div>
 </li>
 </ul>
