--- a/research.html
+++ b/research.html
@@ -150,7 +150,8 @@ Media coverage: <a href="https://medium.com/center-for-data-science/a-new-compre
 </ol>
 
 <ol start="10">
-<li><p><a href="http://papers.ssrn.com/sol3/papers.cfm?abstract_id=2737045">"Feature-Based Dynamic Pricing,"</a> with I. Lobel and R. Paes Leme, Forthcoming in <b>Management Science</b>. <br />
+<li><p><a href="https://maxccohen.github.io/Feature-Based-Dynamic-Pricing.pdf">"Feature-Based Dynamic Pricing,"</a> with I. Lobel and R. Paes Leme, <b>Management Science</b> (published online, May 2020). <br />
+<a href="https://maxccohen.github.io/Feature-Based-Appendix.pdf">Online Appendix</a>.
 Accepted to the 2016 <i>ACM Conference on Economics & Computation </i> (EC).<br />
 Associated article in <a href="http://www.sigecom.org/exchanges/volume_15/2/COHEN.pdf">SIGecom Exchanges</a>. <br />
 </div>
