--- a/research.html
+++ b/research.html
@@ -32,7 +32,8 @@ else { document.getElementById(theID).style.display = "block" } }
 <div class="menu-item"><a href="research.html"class="current">Research</a></div>
 <div class="menu-item"><a href="workEx.html">Teaching and Work Experience</a></div>
 <div class="menu-item"><a href="Cohen_CV.pdf">CV</a></div>
-<div class="menu-item"><a href="awards.html">Awards & Grants</a></div>
+<div class="menu-item"><a href="awards.html">Awards</a></div>
+<div class="menu-item"><a href="grants.html">Grants</a></div>
 <div class="menu-item"><a href="patents.html">Patents</a></div>
 <div class="menu-item"><a href="students.html">Students</a></div>
 
