--- a/awards.html
+++ b/awards.html
@@ -17,7 +17,8 @@
 <div class="menu-item"><a href="research.html">Research</a></div>
 <div class="menu-item"><a href="workEx.html">Teaching and Work Experience</a></div>
 <div class="menu-item"><a href="Cohen_CV.pdf">CV</a></div>
-<div class="menu-item"><a href="awards.html">Awards & Grants</a></div>
+<div class="menu-item"><a href="awards.html">Awards</a></div>
+<div class="menu-item"><a href="grants.html">Grants</a></div>
 <div class="menu-item"><a href="patents.html">Patents</a></div>
 <div class="menu-item"><a href="students.html">Students</a></div>
 
