--- a/grants.html
+++ b/grants.html
@@ -30,25 +30,12 @@
 <h3>Awards & Grants</h3>
 <ul>
 
-<li><p>2020 POMS Wickham Skinner Early-Career Research Accomplishments Award</p>
+<li><p>2020: IVADO Fundamental Research Project Grant: Retail Innovation Lab: Data Science for Socially Responsible Food Choices - $221,000</p>
   
-<li><p>Honorable Mention in the 2020 POMS Service Operations Emerging Scholar Award</p>
-
+<li><p>2020: Fonds de Recherche du Québec – Société et Culture (FRQSC): Data-Driven Smart City Operations Management: a System Coupling Perspective - $145,061 <br />
+Role: Co-Investigator (with W. Qi, M. Gendreau, X. Liu)</p>
+  
 <li><p>2020: Internal Social Sciences and Humanities Development Grant - $5,000</p>
-
-<li><p>First Place in the Best OM Paper in Management Science Award, 2019</p>
-  
-<li><p>Finalist in the INFORMS Data Mining Section Best Paper Competition, 2019</p>
-  
-<li><p>Finalist in the INFORMS BOM Section Best Working Paper Competition, 2019</p>
-  
-<li><p>Best Paper Award in Operations and Supply Chain Management, Academy of Management, 2019</p>
-  
-<li><p>Honorable Mention in the 2019 ENRE Best Publication Award in Environment and Sustainability</p>
-  
-<li><p>Finalist in the 2019 INFORMS Case Competition</p>
-
-<li><p>2019 M&SOM Meritorious Service Award</p>
   
 <li><p>2019-2021: Bensadoun Faculty Scholar Award - $20,000 per year for 3 years</p>
   
@@ -57,30 +44,6 @@
 <li><p>2019-2021  SSHRC New Frontiers Grant: AI-Tribunal for Small Claims: Building an Intelligent Dispute Resolution System  - $244,562 <br />
 Role: Co-applicant  (with S. Dahan, X. Zhu, J. Serpa, Y. Levin, J. Touboul)</p>
 
-<li><p>2018 M&SOM Meritorious Service Award</p>
-
-<li><p>First Place in the 2018 Best Cluster Paper Award - INFORMS Service Science</p>
-
-<li><p>Finalist in the 2018 M&SOM Student Paper Competition (student: Baek Jung Kim)</p>
-
-<li><p>First Place in the 2018 INFORMS Case Competition</p>
-
-<li><p>Best Technical Presentation, AGIFORS Annual Symposium (2018)</p>
-
-<li><p>2017 M&SOM Meritorious Service Award</p>
-
-<li><p>Honorable mention in the 2017 Best Cluster Paper Award - INFORMS Service Science</p>
-
-<li><p>2016 INFORMS Revenue Management and Pricing Dissertation Award</p>
-
-<li><p>First Place in the 2016 Best Cluster Paper Award - INFORMS Service Science</p>
-
-<li><p>Finalist in the 2015 INFORMS Revenue Management and Pricing Practice Award</p>
-
-<li><p>First Place in the 2015 Best Student Paper POM Supply Chain</p><li><p>2015 NEDSI Conference Best Application of Theory Award</p>
-
-<li><p>First Place in the 2014 Best Student Paper Award - INFORMS Service Science</p>
-
 <li><p>UPS Ph.D. Fellowship (2014-2015)</p>
 
 <li><p>Martin Fellowship for Sustainability (2013-2014)</p>
@@ -88,10 +51,6 @@ Role: Co-applicant  (with S. Dahan, X. Zhu, J. Serpa, Y. Levin, J. Touboul)</p>
 <li><p>MIT Energy Initiative Fellowship (2011-2012)</p>
 
 <li><p>Lady Davis Fellowship (2007-2008)</p>
-
-<li><p>First price at the Technion Creativity in Science and Technology competition (2007)</p>
-
-<li><p>Best student project in the 47th Israel Annual Conference on Aerospace Sciences (2006)</p>
  
 
 <!--Page generated 2009-08-14 17:53:09 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.-->
