--- a/grants.html
+++ b/grants.html
@@ -27,7 +27,7 @@
 <div id="toptitle">
 <h1>Maxime Cohen</h1>
 </div>
-<h3>Awards & Grants</h3>
+<h3>Grants</h3>
 <ul>
 
 <li><p>2020: IVADO Fundamental Research Project Grant: Retail Innovation Lab: Data Science for Socially Responsible Food Choices - $221,000</p>
