--- a/awards.html
+++ b/awards.html
@@ -27,7 +27,7 @@
 <div id="toptitle">
 <h1>Maxime Cohen</h1>
 </div>
-<h3>Awards & Grants</h3>
+<h3>Awards</h3>
 <ul>
 
 <li><p>2020 POMS Wickham Skinner Early-Career Research Accomplishments Award</p>
