--- a/grants.html
+++ b/grants.html
@@ -30,12 +30,12 @@
 <h3>Grants</h3>
 <ul>
 
-<li><p>2020: IVADO Fundamental Research Project Grant: Retail Innovation Lab: Data Science for Socially Responsible Food Choices - $221,000</p>
+<li><p>2020-2022: IVADO Fundamental Research Project Grant: Retail Innovation Lab: Data Science for Socially Responsible Food Choices - $221,000</p>
   
-<li><p>2020: Fonds de Recherche du Québec – Société et Culture (FRQSC): Data-Driven Smart City Operations Management: a System Coupling Perspective - $145,061 <br />
+<li><p>2020-2023: Fonds de Recherche du Québec – Société et Culture (FRQSC): Data-Driven Smart City Operations Management: a System Coupling Perspective - $145,061 <br />
 Role: Co-Investigator (with W. Qi, M. Gendreau, X. Liu)</p>
   
-<li><p>2020: Internal Social Sciences and Humanities Development Grant - $5,000</p>
+<li><p>2020-2021: Internal Social Sciences and Humanities Development Grant - $5,000</p>
   
 <li><p>2019-2021: Bensadoun Faculty Scholar Award - $20,000 per year for 3 years</p>
   
