--- a/grants.html
+++ b/grants.html
@@ -30,7 +30,8 @@
 <h3>Grants</h3>
 <ul>
 
-<li><p>2020-2022: IVADO Fundamental Research Project Grant: Retail Innovation Lab: Data Science for Socially Responsible Food Choices - $221,000</p>
+<li><p>2020-2022: IVADO Fundamental Research Project Grant: Retail Innovation Lab: Data Science for Socially Responsible Food Choices - $221,000 <br />
+Role: Co-PI  (with S. Ray, J. Clark, A. Moon)</p>
   
 <li><p>2020-2023: Fonds de Recherche du Québec – Société et Culture (FRQSC): Data-Driven Smart City Operations Management: a System Coupling Perspective - $145,061 <br />
 Role: Co-Investigator (with W. Qi, M. Gendreau, X. Liu)</p>
