--- a/grants.html
+++ b/grants.html
@@ -42,16 +42,16 @@ Role: Co-Investigator (with W. Qi, M. Gendreau, X. Liu)</p>
   
 <li><p>2019: Cherre’s Gift for Research Excellence: Applying Data Science to Real Estate - $10,400, Role: PI</p>
 
-<li><p>2019-2021  SSHRC New Frontiers Grant: AI-Tribunal for Small Claims: Building an Intelligent Dispute Resolution System  - $244,562 <br />
+<li><p>2019-2021 SSHRC New Frontiers Grant: AI-Tribunal for Small Claims: Building an Intelligent Dispute Resolution System  - $244,562 <br />
 Role: Co-applicant  (with S. Dahan, X. Zhu, J. Serpa, Y. Levin, J. Touboul)</p>
 
-<li><p>UPS Ph.D. Fellowship (2014-2015)</p>
+<li><p>2014-2015: UPS Ph.D. Fellowship</p>
 
-<li><p>Martin Fellowship for Sustainability (2013-2014)</p>
+<li><p>2013-2014: Martin Fellowship for Sustainability</p>
 
-<li><p>MIT Energy Initiative Fellowship (2011-2012)</p>
+<li><p>2011-2012: MIT Energy Initiative Fellowship</p>
 
-<li><p>Lady Davis Fellowship (2007-2008)</p>
+<li><p>2007-2008: Technion Excellence Scholarship and Lady Davis Fellowship</p>
  
 
 <!--Page generated 2009-08-14 17:53:09 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.-->
