--- a/grants.html
+++ b/grants.html
@@ -33,7 +33,7 @@
 <li><p>2020-2022: IVADO Fundamental Research Project Grant: Retail Innovation Lab: Data Science for Socially Responsible Food Choices - $221,000 <br />
 Role: Co-PI  (with S. Ray, J. Clark, A. Moon)</p>
   
-<li><p>2020-2023: Fonds de Recherche du Québec – Société et Culture (FRQSC): Data-Driven Smart City Operations Management: a System Coupling Perspective - $145,061 <br />
+<li><p>2020-2023: Fonds de Recherche du Québec – Société et Culture (FRQSC): Data-Driven Smart City Operations Management: A System Coupling Perspective - $145,061 <br />
 Role: Co-Investigator (with W. Qi, M. Gendreau, X. Liu)</p>
   
 <li><p>2020-2021: Internal Social Sciences and Humanities Development Grant - $5,000</p>
