--- a/workEx.html
+++ b/workEx.html
@@ -32,14 +32,14 @@
 
 <ul>
 <li><p><b><a href="">Operations Management - McGill University - 2020 </a></b><br />
-Undergraduate core course (2 sections of 65 students).
+Undergraduate core course (2 sections of 65 students). Evaluations: 4.9, 4.6 (out of 5).
 </p>
 </li>
 </ul>
 
 <ul>
 <li><p><b><a href="">Revenue Management - McGill University - 2020 </a></b><br />
-Elective course for Master of Management in Analytics.
+Elective course for Master of Management in Analytics. Evaluation: 5/5.
 </p>
 </li>
 </ul>
