--- a/workEx.html
+++ b/workEx.html
@@ -81,7 +81,8 @@ Columbia CaseWorks 180203, April 2018. Available through <a href="https://hbsp.h
 
 <ul>
 <li><p><b><a href="https://maxccohen.github.io/Case-Study-Promotions.pdf">Case Study: "Optimizing Promotions for Supermarkets Using Data Analytics,"</a></b> with G. Perakis<br />
-Available through <a href="http://www.thecasecentre.org/educators/products/view?id=141750">thecasecentre.org</a>, March 2017.
+Available through <a href="http://www.thecasecentre.org/educators/products/view?id=141750">thecasecentre.org</a>, March 2017. <br />
+First Place in the 2018 INFORMS Case Competition <br />
 </p>
 </li>
 </ul>
@@ -94,7 +95,8 @@ Available through <a href="http://www.thecasecentre.org/educators/products/view?
 
 <ul>
 <li><p><b><a href="https://www.liebertpub.com/doi/full/10.1089/big.2018.0092">Case Study: "Data-Driven Investment Strategies for Peer-to-Peer Lending,"</a></b> with C. D. Guetta, K. Jiao, and F. Provost<br />
-<a href="https://danguetta.github.io/research/lc">Supplemental material and notebooks</a>.
+<a href="https://danguetta.github.io/research/lc">Supplemental material and notebooks</a>. <br />
+Finalist in the 2019 INFORMS Case Competition <br />
 </p>
 </li>
 </ul>
