--- a/workEx.html
+++ b/workEx.html
@@ -74,7 +74,8 @@ Course in the M.S. in Business Analytics program - 61 students.
 
 <ul>
 <li><p><b><a href="https://www8.gsb.columbia.edu/caseworks/node/674">Case Study: "Supply Chain Coordination and Contracts in the Sharing Economy - a Case Study at Cargo,"</a></b> with C. D. Guetta and W. Xiao<br />
-Columbia CaseWorks 180203, April 2018. Available through <a href="https://hbsp.harvard.edu/product/CU215-PDF-ENG">Harvard Business Publishing</a>.
+Columbia CaseWorks 180203, April 2018. Available through <a href="https://hbsp.harvard.edu/product/CU215-PDF-ENG">Harvard Business Publishing</a>. <br />
+First Place in the 2018 <b>INFORMS Case Competition</b> <br />
 </p>
 </li>
 </ul>
@@ -82,7 +83,6 @@ Columbia CaseWorks 180203, April 2018. Available through <a href="https://hbsp.h
 <ul>
 <li><p><b><a href="https://maxccohen.github.io/Case-Study-Promotions.pdf">Case Study: "Optimizing Promotions for Supermarkets Using Data Analytics,"</a></b> with G. Perakis<br />
 Available through <a href="http://www.thecasecentre.org/educators/products/view?id=141750">thecasecentre.org</a>, March 2017. <br />
-First Place in the 2018 INFORMS Case Competition <br />
 </p>
 </li>
 </ul>
@@ -96,7 +96,7 @@ First Place in the 2018 INFORMS Case Competition <br />
 <ul>
 <li><p><b><a href="https://www.liebertpub.com/doi/full/10.1089/big.2018.0092">Case Study: "Data-Driven Investment Strategies for Peer-to-Peer Lending,"</a></b> with C. D. Guetta, K. Jiao, and F. Provost<br />
 <a href="https://danguetta.github.io/research/lc">Supplemental material and notebooks</a>. <br />
-Finalist in the 2019 INFORMS Case Competition <br />
+Finalist in the 2019 <b>INFORMS Case Competition</b> <br />
 </p>
 </li>
 </ul>
