--- a/awards.html
+++ b/awards.html
@@ -65,6 +65,8 @@
 <li><p>2016 INFORMS Revenue Management and Pricing Dissertation Award</p>
 
 <li><p>First Place in the 2016 Best Cluster Paper Award - INFORMS Service Science</p>
+  
+<li><p>Finalist for the 2016 Service Science Section Student Paper Competition</p>
 
 <li><p>Finalist in the 2015 INFORMS Revenue Management and Pricing Practice Award</p>
 
