--- a/research.html
+++ b/research.html
@@ -390,7 +390,7 @@ In this paper, we ....
 <ul>
 <li><p><a href="https://maxccohen.github.io/SunSailorArt19nov06.pdf">"Sunsailor: Solar Powered UAV,"</a> with S. Tsach, L. Ankri, Y. Ehrlich, T. Goldenberg, H. Levy, I. Regev, A. Vladimirsky, A. 
 Weider, and Z. Yossef, Proc. 47<sup>th</sup> Israel Annual Conf. on Aerospace Sciences, Feb. 2007. <br />
-Winner of the 2007 Technion Creativity in Science and Technology competition. <br />
+First price at the 2007 Technion Creativity in Science and Technology competition, Best student project in the 47th Israel Annual Conference on Aerospace Sciences <br />
 </div>
 </p>
 </li>
