--- a/research.html
+++ b/research.html
@@ -250,7 +250,7 @@ Media coverage: <a href="https://www.mcgill.ca/delve/article/blog/converting-com
 
 <ul>
 <li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3411653">"Data Aggregation and Demand Prediction,"</a> with K. Jiao and R. Zhang, submitted <br /> <!--<font color="red"<b>(NEW - July 2019)</b></font> <br /> -->
-Finalist in the INFORMS Data Mining Section Best Paper Competition, 2019 <br />
+Finalist in the 2019 INFORMS Data Mining Section Best Paper Competition <br />
 </div>
 </p>
 </li>
