--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 <div class="menu-item"><a href="grants.html">Grants</a></div>
 <div class="menu-item"><a href="patents.html">Patents</a></div>
 <div class="menu-item"><a href="students.html">Students</a></div>
+<div class="menu-item"><a href="news.html">In the News</a></div>
 
 </td>
 <td id="layout-content">
