--- a/research.html
+++ b/research.html
@@ -36,6 +36,7 @@ else { document.getElementById(theID).style.display = "block" } }
 <div class="menu-item"><a href="grants.html">Grants</a></div>
 <div class="menu-item"><a href="patents.html">Patents</a></div>
 <div class="menu-item"><a href="students.html">Students</a></div>
+<div class="menu-item"><a href="news.html">In the News</a></div>
 
 </td>
 <td id="layout-content">
