--- a/patents.html
+++ b/patents.html
@@ -21,6 +21,7 @@
 <div class="menu-item"><a href="awards.html">Grants</a></div>
 <div class="menu-item"><a href="patents.html"class="current">Patents</a></div>
 <div class="menu-item"><a href="students.html">Students</a></div>
+<div class="menu-item"><a href="news.html">In the News</a></div>
 
 </td>
 <td id="layout-content">
