--- a/news.html
+++ b/news.html
@@ -32,11 +32,8 @@
 <ul>
 
   
-<li><p>2020-2021: Internal Social Sciences and Humanities Development Grant - $5,000</p>
+<li><p>Consumer Behaviour in the Post-Pandemic Retail Landscape</p>
   
-<li><p>2019-2022: Bensadoun Faculty Scholar Award - $20,000 per year for 3 years</p>
-
-<li><p>2007-2008: Technion Excellence Scholarship and Lady Davis Fellowship</p>
  
 
 <!--Page generated 2009-08-14 17:53:09 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.-->
