--- a/news.html
+++ b/news.html
@@ -36,6 +36,8 @@
   
 <li><p><a href="https://globalnews.ca/video/6947666/community-events-legal-questions-for-laid-off-canadians/">NEWS Community Events: Legal Questions for Laid off Canadians</a>, Global News, May 2020</p>
  
+<li><p><a href="https://maxccohen.github.io/CQIC_RAPPORT_COVID-29.pdf">COVID-19 Planifier la reprise</a>, Le Centre Quebecois Innovation en Comerce, April 2020</p>
+  
 <li><p><a href="https://myopencourt.org/conflict-analytics-lab-launches-tools-for-those-affected-by-pandemic-layoffs/">Conflict Analytics Lab launches tools for those affected by pandemic layoffs</a>, Conflict Analytics Lab Blog, May 2020</p>
   
 <li><p><a href="https://www.lawtimesnews.com/resources/legal-education/queens-law-partners-with-mcgill-to-combat-access-to-justice-issues-using-ai-and-analytics/326110">United by Conflict – Queen’s and McGill Partner Up Through the Conflict Analytics Lab</a>, Kingston Herald, February 2020 2019</p>
