--- a/news.html
+++ b/news.html
@@ -42,7 +42,7 @@
   
 <li><p><a href="https://www.lawtimesnews.com/resources/legal-education/queens-law-partners-with-mcgill-to-combat-access-to-justice-issues-using-ai-and-analytics/326110">United by Conflict – Queen’s and McGill Partner Up Through the Conflict Analytics Lab</a>, Kingston Herald, February 2020</p>
 
-<li><p><a href="http://kingstonherald.com/release/conflict-analytics-lab-2010328064">Queen’s Law partners with McGill to combat access-to-justice issues using AI and analytics</a>, Law Times, February 2020 2019</p>
+<li><p><a href="http://kingstonherald.com/release/conflict-analytics-lab-2010328064">Queen’s Law partners with McGill to combat access-to-justice issues using AI and analytics</a>, Law Times, February 2020</p>
  
 <li><p><a href="https://www.mcgill.ca/bensadoun-school/article/canadian-retailers-digitization-long-overdue">For Canadian retailers, digitization is long overdue</a>, McGill BSRM, December 2019</p>
   
